[metadata]
name = instant_client
author = Alex Hall
author_email = alex.mojaki@gmail.com
license = MIT
description = Type safe JSON RPC client with automatic (de)serialization. Best paired with instant_api.
url = http://github.com/alexmojaki/instant_client
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = instant_client
install_requires = jsonrpcclient; datafunctions
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
include_package_data = True
tests_require = pytest; instant_client; littleutils

[options.extras_require]
tests = pytest; instant_api; flask; requests
requests = requests